objects/vlocity_ins__CatalogProductRelationship__c.object
<CustomObject>
    <description>Associates a product with a catalog or catalog category.</description>
    <fields>
        <fullName>vlocity_ins__CatalogId__c</fullName>
        <label>Catalog</label>
        <referenceTo>vlocity_ins__Catalog__c</referenceTo>
        <relationshipLabel>Catalog Product Relationships</relationshipLabel>
        <relationshipName>CatalogProductRelationships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EndDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ItemType__c</fullName>
        <description>Will hold one of 4 values - Product, Promotion, Product with Promotion, Null depending on how the two fields of Product and Promotion are populated</description>
        <formula>IF(ISBLANK(vlocity_ins__Product2Id__c),IF(ISBLANK(vlocity_ins__PromotionId__c),Null,&apos;Promotion&apos;),IF(ISBLANK(vlocity_ins__PromotionId__c),&apos;Product&apos;,&apos;Product with Promotion&apos;))</formula>
        <label>Item Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Product2Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Catalog Product Relationships</relationshipLabel>
        <relationshipName>CatalogProductRelationships2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PromotionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promotion</label>
        <referenceTo>vlocity_ins__Promotion__c</referenceTo>
        <relationshipLabel>Catalog Product Relationships</relationshipLabel>
        <relationshipName>CatalogProductRelationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SequenceNumber__c</fullName>
        <label>Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Catalog Product Relationship</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Catalog Product Relationship Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Catalog Product Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>